<resources>
    <string name="app_name">ProyectoExamen</string>

    <!-- MainActivity-->
    <string name="but_agregar">Agregar Trabajador</string>
    <string name="but_borrar">Borrar Todo</string>

    <!-- AgregarTrabajador -->
    <string name="edit_nombre">Nombre</string>
    <string name="edit_apellidos">Apellidos</string>
    <string name="edit_edad">Edad</string>
    <string name="but_guardar">Guardar</string>
    <string name="but_salir">Salir</string>

    <!-- AgregarFormacion -->
    <string name="edit_curso">Nombre del curso</string>
    <string name="edit_duracion">Duración</string>

    <!-- InfoTrabajador -->
    <string name="text_info">Trabajador </string>
    <string name="text_nombre">Nombre: </string>
    <string name="text_apellidos">Apellidos: </string>
    <string name="text_edad">Edad: </string>
    <string name="text_cursos">Cursos: </string>
    
    <!-- AlertDialog -->
    <string name="dialog_tittle">Borrar</string>
    <string name="dialog_message">¿Desea borrar el curso?</string>
    <string name="dialog_positive_button">Si</string>
    <string name="dialog_negative_button">No</string>

    <!-- Actionbar -->
    <string name="info">Info.</string>
    <string name="salir">Salir</string>
</resources>
