<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar_trabajador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsmooth.proyectoexamen.AgregarTrabajador"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_nombre" />
    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_apellidos"/>
    <EditText
        android:id="@+id/editEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_edad"/>

    <Button
        android:id="@+id/butGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_guardar"/>
    <Button
        android:id="@+id/butSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_salir"/>


</LinearLayout>
