<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar_formacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fsmooth.proyectoexamen.AgregarFormacion"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_curso"/>

    <EditText
        android:id="@+id/editDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_duracion"/>

    <Button
        android:id="@+id/butGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_guardar"/>

    <Button
        android:id="@+id/butSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_salir"/>


</LinearLayout>
