<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_trabajador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fsmooth.proyectoexamen.InfoTrabajador"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_info"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre"/>
    <TextView
        android:id="@+id/textApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_apellidos"/>
    <TextView
        android:id="@+id/textEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_edad"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <ListView
        android:id="@+id/listViewCursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>




</LinearLayout>
